[FIX] When Fullscreen is activated, shift menu toggle button to the left to avoid overlapping the full-screen button. Thanks, Xavi.
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/16.x@60843 b456876b-0849-0410-b77d-98878d47e9d5

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -948,6 +948,9 @@ body.fullscreen {
   top: 0;
   z-index: 1040;
 }
+#fullscreenbutton ~ nav .navbar-toggle {
+  right: 42px;
+}
 #show-errors-button {
   z-index: 1024;
 }
